# bookstore

./: db.sqlite3  pyproject.toml
authentication/: forms.py  urls.py  views.py
authentication/templates/: login.html  signup.html
bookstore/: settings.py  urls.py
pages/: helpers.py  load.py  models.py  urls.py  views.py
pages/migrations/: 0001_initial.py
pages/static/styles/: style.css
pages/templates/: layout.html  mybooks.html
