[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Adham Nasr <adham.nasr@bld.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.7"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
